--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nextjs-portfolio-project",
+  "name": "vite-portfolio-project",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "homepage": "https://alessandrasalanitri.github.io/2meet",
 
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
 
   "dependencies": {
@@ -17,13 +17,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
-    "next": "^14.1.0"
+    "react-router-dom": "^7.1.1"
   },
 
   "devDependencies": {
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0"
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "vite": "^6.0.5",
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
